# wzoj-judger2

./: Makefile.in  configure.ac
src/: Makefile.am  Makefile.in  common.h  comparer.cc  comparer.h  cpu-set-manager.cc  cpu-set-manager.h  get-rq.cc  get-rq.h  http.cc  http.h  jsoncpp.cpp  judge-task.cc  judge-task.h  judge-worker.cc  judge-worker.h  judger.cc  judger.h  libwjudger_seccomp_loader.c  main.cc  post-rq.cc  post-rq.h  problem.cc  problem.h  remote-object.cc  remote-object.h  request.cc  request.h  sand-box.cc  sand-box.h  sandbox.cc  sandbox.h  solution.cc  solution.h  solutions-listener.cc  solutions-listener.h  syscall_whitelist.h  testcase.cc  testcase.h  w-server.cc  (+5 more)
tests/: Makefile  c1-1.txt  c1-3.txt  c2-1.txt  c2-2.txt  gsample.cc  test_comp.cc
